static/sass/styles.scss
// Import the framework
@import "vanilla-framework";

// Include all of Vanilla Framework
@include vanilla;

// import cookie policy
@import "@canonical/cookie-policy/build/css/cookie-policy";

// Blockquote style override until officially in vanilla
.p-pull-quote {
  border-left: 3px solid #e95420;
  padding-bottom: 0.75rem;

  .p-pull-quote__quote {
    font-style: italic;

    &:first-of-type::before,
    &:last-of-type::after {
      content: "";
    }
  }

  .p-pull-quote__citation {
    font-style: normal;
    margin-bottom: 0;
  }
}

.article-image a img {
  height: 100%;
}

